WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90173
Fix LayoutUnit usage in RenderImage::imageDimensionsChanged
https://bugs.webkit.org/show_bug.cgi?id=90173
Summary
Fix LayoutUnit usage in RenderImage::imageDimensionsChanged
Dominik Röttsches (drott)
Reported
2012-06-28 06:44:48 PDT
There's still two int declarations (oldwidth, oldheight) in RenderImage::imageDimensionsChanged - these should be LayoutUnit's in my understanding. Patch follows.
Attachments
Fixing declarations.
(1.60 KB, patch)
2012-06-29 03:25 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominik Röttsches (drott)
Comment 1
2012-06-29 03:25:40 PDT
Created
attachment 150127
[details]
Fixing declarations.
Emil A Eklund
Comment 2
2012-07-03 10:50:40 PDT
The intrinsic size for a replaced element is always in full pixels so in most cases this doesn't matter. You are right though that it should be using LayoutUnits. Thanks!
Eric Seidel (no email)
Comment 3
2012-07-03 11:40:40 PDT
Comment on
attachment 150127
[details]
Fixing declarations. LGTM. I don't see any way to trigger this bug. Unless intrinsic size is somehow scaled (which I doubt).
Eric Seidel (no email)
Comment 4
2012-07-03 11:41:01 PDT
Comment on
attachment 150127
[details]
Fixing declarations. Sorry, misclick.
WebKit Review Bot
Comment 5
2012-07-03 12:07:21 PDT
Comment on
attachment 150127
[details]
Fixing declarations. Clearing flags on attachment: 150127 Committed
r121795
: <
http://trac.webkit.org/changeset/121795
>
WebKit Review Bot
Comment 6
2012-07-03 12:07:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug