Fix LayoutUnit usage in RenderImage::imageDimensionsChanged https://bugs.webkit.org/show_bug.cgi?id=90173

Patch by Dominik Röttsches <dominik.rottsches@intel.com> on 2012-07-03
Reviewed by Eric Seidel.

The appropriate type should be used for storing width() and height() into local temporary variables.

No new tests, no change in behavior.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::imageDimensionsChanged):

Canonical link: https://commits.webkit.org/108354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121795 268f45cc-cd09-0410-ab3c-d52691b4dbfc